k8s/loadtest.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: loadsimulator
  labels:
    name: loadsimulator
