k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-advisor-azure
  namespace: travel-advisor-azure
spec:
  selector:
    matchLabels:
      name: travel-advisor-azure
  template:
    metadata:
      labels:
        name: travel-advisor-azure
    spec:
      containers:
        - name: travel-advisor-azure
          image: hrexed/travel-advisor-azure:0.1
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: secrets
              readOnly: true
              mountPath: "/etc/secrets"
      volumes:
        - name: secrets
          projected:
            sources:
              - secret:
                  name: azure
                  optional: false
---
apiVersion: v1
kind: Service
metadata:
  name: travel-advisor-azure
  namespace: travel-advisor-azure
spec:
  type: ClusterIP
  selector:
    name: travel-advisor-azure
  ports:
    - port: 80
      name: http
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: travel-advisor-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: "traveladvisor.IP_TO_REPLACE.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: travel-advisor-azure
                port:
                  number: 80
